pace animation and layout shift fixed

--- a/src/Components/preloader.css
+++ b/src/Components/preloader.css
@@ -5,6 +5,8 @@
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	user-select: none;
+	will-change: contents;
+
 }
 
 .pace .pace-progress {
@@ -15,13 +17,18 @@
 	z-index: 2000;
 	top: 0;
 	right: 0;
-
 	-webkit-transform: translate3d(0, 0, 0) !important;
 	-ms-transform: translate3d(0, 0, 0) !important;
 	transform: translate3d(0, 0, 0) !important;
-	transition: top 1s ease;
+	
+	-webkit-transform-origin: top;
+	-ms-transform-origin: top;
+	transform-origin: top;
+	transition: all 1s ease;
 }
-
+.pace .pace-progress.translate-up {
+	transform: translateY(-110vh) !important;
+  }
 .pace .pace-progress::before {
 	transform: translatex(50%) translateY(var(--progress-top, 0));
 	opacity: var(--progress-opacity, 1);
@@ -31,12 +38,12 @@
 
 	display: block;
 	position: absolute;
-	content:'' ;
+	content: '';
 	background-image: url(/llogo.png);
 	width: 50px;
-    height: 50px;
-    background-repeat: no-repeat;
-    background-position: center;
+	height: 50px;
+	background-repeat: no-repeat;
+	background-position: center;
 	text-align: center;
 	/* transition: top 1.5s ease, opacity 1s ease ; */
 
@@ -65,5 +72,5 @@
 	width: 0;
 	height: 2px;
 	background: white;
-	transition: all 2.5s cubic-bezier(0.19, 1, 0.22, 1),
+	transition: all 2.5s cubic-bezier(0.19, 1, 0.22, 1);
 }
